--- a/public/index.html
+++ b/public/index.html
@@ -5,7 +5,7 @@
     <link rel="icon" href="%PUBLIC_URL%/favicon.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
-    <meta name="description" content="Web site created using create-react-app" />
+    <meta name="description" content="Metaverse came to Cardano. Enjoy and explore this world." />
     <meta name="image" property="og:image" content="/img/thumb.png" />
 
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
@@ -23,7 +23,7 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>Cardano Village</title>
+    <title>CardanoVillage</title>
   </head>
   <body>
     <noscript>Metaverse came to Cardano. Enjoy and explore this world. </noscript>
