--- a/public/index.html
+++ b/public/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
     <meta name="description" content="Metaverse came to Cardano. Enjoy and explore this world." />
-    <meta name="image" property="og:image" content="/img/thumb.png" />
+    <meta name="image" property="og:image" content="%PUBLIC_URL%/thumb.png" />
 
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <!--
